fix: little bit smaller gap between values

--- a/src/components/values/values.module.css
+++ b/src/components/values/values.module.css
@@ -9,6 +9,6 @@
   .values {
     flex-direction: column;
     align-items: center;
-    gap: 15rem;
+    gap: 5rem;
   }
 }
